environments/microsweeper-dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: microsweeper-quarkus
    app.kubernetes.io/part-of: app-microsweeper-quarkus
  name: microsweeper-quarkus
  namespace: microsweeper-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: microsweeper-quarkus
      app.kubernetes.io/part-of: app-microsweeper-quarkus
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: microsweeper-quarkus
        app.kubernetes.io/part-of: app-microsweeper-quarkus
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: microsweeper-quarkus
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
