environments/microsweeper-dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: microsweeper-quarkus
    app.kubernetes.io/part-of: app-microsweeper-quarkus
  name: microsweeper-quarkus
  namespace: microsweeper-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: microsweeper-quarkus
    app.kubernetes.io/part-of: app-microsweeper-quarkus
status:
  loadBalancer: {}
